[package]
name = "water_otter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3+1.3.251", features = ["linked"] }
winit = "0.28.6"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
shaderc = "0.8.2"